--- a/src/WebService/Makefile.am
+++ b/src/WebService/Makefile.am
@@ -9,7 +9,7 @@ SimiasWebService_FLAGS = $(CSC_LIBFLAG)
 SimiasWebService_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasClient.dll Simias.dll Novell.Security.ClientPasswordManager.NetCredential.dll
 SimiasWebService_LIBPATH = ../SimiasClient ../Simias.dll $(NOVELL_SECURITY_DIR)
 
-EXTRA_DIST = web.config Global.asax Simias.asmx SimiasBrowser.asmx $(SimiasWebService_CSFILES)
+EXTRA_DIST = web.config Global.asax Simias.asmx SimiasBrowser.asmx Simias.wsdl $(SimiasWebService_CSFILES)
 
 if MAKE_DOC_FILE
 DOC_FILE = $(basename $@).doc.xml
