--- a/simias/src/libsimias/Makefile.am
+++ b/simias/src/libsimias/Makefile.am
@@ -1,25 +1,24 @@
-IFOLDER_CLIENT_WSDL = ../WebService/iFolderWebService.wsdl
+SIMIAS_WSDL = ../WebService/Simias.wsdl
 
-EXTRA_DIST = ifolder.h
+EXTRA_DIST =
 
 # Make sure the following files are not included in the dist
 dist-hook:
-	rm -rf `find $(distdir) |grep iFolderClientLib.c`
+	rm -rf `find $(distdir) |grep simiasClientLib.c`
 	rm -rf `find $(distdir) |grep envC.c`
 	rm -rf `find $(distdir) |grep stdsoap2.c`
 
 
-lib_LTLIBRARIES = libifolderclient.la
+lib_LTLIBRARIES = libsimias.la
 
 override CFLAGS =
 
-libifolderclient_la_SOURCES = \
- 	envC.c iFolderClientLib.c stdsoap2.c ifolder.c
+libsimias_la_SOURCES = \
+ 	envC.c simiasClientLib.c stdsoap2.c
 
-pkginclude_HEADERS = \
-	ifolder.h
+pkginclude_HEADERS = 
 
-libifolderclient_la_CFLAGS = \
+libsimias_la_CFLAGS = \
 	-DWITH_NONAMESPACES
 
 envC.c: $(srcdir)/stdsoap2.c
@@ -30,14 +29,14 @@ $(srcdir)/stdsoap2.c:
 	cp $(GSOAP_PATH)/stdsoap2.h $(srcdir)
 	cp $(GSOAP_PATH)/stdsoap2.c $(srcdir)
 
-$(srcdir)/iFolderClient.h: $(srcdir)/stdsoap2.c $(IFOLDER_CLIENT_WSDL)
-	$(GSOAP_PATH)/wsdl2h -c -o $@ $(IFOLDER_CLIENT_WSDL)
+$(srcdir)/libsimias.h: $(srcdir)/stdsoap2.c $(SIMIAS_WSDL)
+	$(GSOAP_PATH)/wsdl2h -c -o $@ $(SIMIAS_WSDL)
 
-$(srcdir)/iFolderClientLib.c: $(srcdir)/iFolderClient.h
-	$(GSOAP_PATH)/soapcpp2 -c -n -piFolder $(srcdir)/iFolderClient.h
+$(srcdir)/simiasClientLib.c: $(srcdir)/libsimias.h
+	$(GSOAP_PATH)/soapcpp2 -c -n -psimias $(srcdir)/libsimias.h
 
 clean-local:
-	rm -f stdsoap2.* *.xml iFolder* env* soap*
+	rm -f stdsoap2.* *.xml simias* env* soap*
 	rm -rf $(COMMON_CLEAN_FILES)
 	
 distclean-local:
