changes for new authentication methods
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@3380 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/other/SimpleServer/Makefile.am
+++ b/other/SimpleServer/Makefile.am
@@ -6,7 +6,7 @@ SimpleServer_CSFILES_CSC := $(subst /,$(SEP),$(SimpleServer_CSFILES))
 SimpleServer_INCLUDES =
 SimpleServer_RESOURCES =
 SimpleServer_FLAGS = $(CSC_LIBFLAG)
-SimpleServer_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll Simias.dll SimiasClient.dll Novell.Security.Web.IAuthenticationService.dll Novell.AddressBook.dll
+SimpleServer_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll Simias.dll SimiasClient.dll Novell.AddressBook.dll
 SimpleServer_LIBPATH = ../../src/Simias.dll ../../src/SimiasClient ../../src/AddressBook $(DESTDIR)$(webbindir)
 
 #EXTRA_DIST = $(SimpleServer_CSFILES)
@@ -28,7 +28,6 @@ endif
 
 install-exec-local: all
 	$(mkinstalldirs) $(DESTDIR)$(webbindir)
-	$(INSTALL_PROGRAM) SimpleServer.xml $(DEBUG_FILES) $(DESTDIR)$(webbindir)
 	$(INSTALL_PROGRAM) SimpleServer.xml $(DESTDIR)$(sysconfdir)
 	$(INSTALL_PROGRAM) DomainService.asmx $(DEBUG_FILES) $(DESTDIR)$(webdir)
 	$(INSTALL_PROGRAM) $(NUNIT_TESTS) $(DEBUG_CHECK_FILES) $(DESTDIR)$(webbindir)
@@ -37,7 +36,6 @@ install-exec-local: all
 
 uninstall-local:
 	cd $(DESTDIR)$(webbindir); $(NUNIT) $(NUNIT_FLAGS) /xml:SimiasTests.test.xml $(NUNIT_TESTS)
-	cd $(DESTDIR)$(webbindir); rm -f  SimpleServer.xml
 	cd $(DESTDIR)$(webdir); rm -f  DomainService.asmx
 	cd $(DESTDIR)$(sysconfdir); rm -f inspection.wsil SimpleServer.xml
 
