--- a/other/SimpleServer/SimpleServer.csproj
+++ b/other/SimpleServer/SimpleServer.csproj
@@ -75,16 +75,6 @@
                     HintPath = "..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
                 />
                 <Reference
-                    Name = "Novell.Security.Web.IAuthenticationService"
-                    AssemblyName = "Novell.Security.Web.IAuthenticationService"
-                    HintPath = "Novell.Security.Web.IAuthenticationService.dll"
-                />
-                <Reference
-                    Name = "Novell.AddressBook"
-                    AssemblyName = "Novell.AddressBook"
-                    HintPath = "..\..\src\AddressBook\Novell.AddressBook.dll"
-                />
-                <Reference
                     Name = "System.Web"
                     AssemblyName = "System.Web"
                     HintPath = "..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Web.dll"
@@ -97,12 +87,12 @@
                 <Reference
                     Name = "Simias"
                     AssemblyName = "Simias"
-                    HintPath = "..\..\src\Simias.dll\Simias.dll"
+                    HintPath = "..\..\stage\web\bin\Simias.dll"
                 />
                 <Reference
-                    Name = "SimiasClient"
-                    AssemblyName = "SimiasClient"
-                    HintPath = "..\..\src\SimiasClient\SimiasClient.dll"
+                    Name = "Novell.AddressBook"
+                    AssemblyName = "Novell.AddressBook"
+                    HintPath = "..\..\src\AddressBook\Novell.AddressBook.dll"
                 />
             </References>
         </Build>
