--- a/ifolder/src/FormsTrayApp/FormsTrayApp.csproj
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.csproj
@@ -158,6 +158,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Domain.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "DomainConnectEventArgs.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
