Added UI for authentication exceptions - grace logins, account disabled, account lockout.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3440 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/iFolderShell/iFolderComponent.csproj
+++ b/ifolder/src/iFolderShell/iFolderComponent.csproj
@@ -134,7 +134,7 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
-                    RelPath = "Domain.cs"
+                    RelPath = "DomainItem.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
@@ -176,6 +176,16 @@
                 <File
                     RelPath = "MyMessageBox.resx"
                     DependentUpon = "MyMessageBox.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
+                    RelPath = "NameConflictPrompt.cs"
+                    SubType = "Form"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "NameConflictPrompt.resx"
+                    DependentUpon = "NameConflictPrompt.cs"
                     BuildAction = "EmbeddedResource"
                 />
                 <File
