--- a/ifolder/src/OSXClient/Info.plist
+++ b/ifolder/src/OSXClient/Info.plist
@@ -15,9 +15,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleSignature</key>
-	<string>????</string>
+	<string>NOVL</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>.9</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
