--- a/ifolder/configure.in
+++ b/ifolder/configure.in
@@ -501,6 +501,7 @@ src/TrayIcon/libtrayicon/Makefile
 src/WebService/Makefile
 src/libifolder/Makefile
 src/OSXClient/Makefile
+src/OSXClient/src/config.h
 src/ClientUpgrade/Makefile
 test/Makefile
 test/iFolder/Makefile
