--- a/ifolder/src/OSXClient/src/config.h.in
+++ b/ifolder/src/OSXClient/src/config.h.in
@@ -21,26 +21,7 @@
  * 
  ***********************************************************************/
 
-#import <Cocoa/Cocoa.h>
-#import <iFolderService.h>
+#define IFOLDER_PREFIX "@prefix@"
+#define SIMIAS_BINARY "@prefix@/bin/simias"
 
-#include <Carbon/Carbon.h>
-#include "simias-event-client.h"
-
-
-// Globals
-extern SimiasEventClient simiasEventClient;
-
-
-// Functions
-void SimiasEventInitialize(void);
-void SimiasEventDisconnect(void);
-int SimiasEventStateCallBack(SEC_STATE_EVENT state_event, const char *message, void *data);
-int SimiasEventNodeCreated(SimiasNodeEvent *nodeEvent, void *data);
-int SimiasEventNodeDeleted(SimiasNodeEvent *nodeEvent, void *data);
-int SimiasEventNodeChanged(SimiasNodeEvent *nodeEvent, void *data);
-
-int SimiasEventSyncCollection(SimiasCollectionSyncEvent *collectionEvent, void *data);
-int SimiasEventSyncFile(SimiasFileSyncEvent *fileEvent, void *data);
-int SimiasEventNotifyMessage(SimiasNotifyEvent *notifyEvent, void *data);
 
