--- a/simias/package/linux/simias.spec.in
+++ b/simias/package/linux/simias.spec.in
@@ -36,8 +36,10 @@ Vendor       : <unknown>
 Packager     : <unknown>
 BuildRoot    : %{_tmppath}/%{name}-%{version}
 
-Requires     : mono-core >= 1.0.4
-Requires     : xsp >= 1.0.4
+Requires     : mono-core >= 1.1.4
+Requires     : mono-data >= 1.1.4
+Requires     : mono-web >= 1.1.4
+Requires     : xsp >= 1.0.6
 Obsoletes    : %{name} <= %{version}
 
 #=============================================================================
