--- a/simias/configure.in
+++ b/simias/configure.in
@@ -447,6 +447,7 @@ src/Makefile
 src/SimiasClient/SimiasSetup.cs
 src/Common/MyDns.cs
 src/Common/simias-client-bootstrap.config
+src/GaimDomain/Makefile
 src/SimiasClient/Makefile
 src/SimiasClient/libsimias-event/Makefile
 src/Simias.dll/Makefile
