Initial version of GaimDomain Service, which will serve as the base for populating a Gaim Domain Roster from a user's Gaim Buddy List.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@3509 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/configure.in
+++ b/configure.in
@@ -447,6 +447,7 @@ src/Makefile
 src/SimiasClient/SimiasSetup.cs
 src/Common/MyDns.cs
 src/Common/simias-client-bootstrap.config
+src/GaimDomain/Makefile
 src/SimiasClient/Makefile
 src/SimiasClient/libsimias-event/Makefile
 src/Simias.dll/Makefile
