Consolidating libsimias and libsimias-event (for C) into simias-client-c.pc.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@3510 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/configure.in
+++ b/configure.in
@@ -442,7 +442,7 @@ AC_OUTPUT([
 Makefile
 simias.pc
 simias-client.pc
-simias-event-client.pc
+simias-client-c.pc
 src/Makefile
 src/SimiasClient/SimiasSetup.cs
 src/Common/MyDns.cs
