I got rid of simias-event-client.pc and moved it to simias-client-c.pc.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3511 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/nautilus-ifolder/configure.in
+++ b/nautilus-ifolder/configure.in
@@ -105,11 +105,11 @@ AC_SUBST(GNOME_SHARP_LIBS)
 PKG_CHECK_MODULES(SIMIAS_CLIENT, simias-client >= $SIMIAS_CLIENT_MINIMUM_VERSION)
 AC_SUBST(SIMIAS_CLIENT_LIBS)
 
-PKG_CHECK_MODULES(SIMIAS_EVENT_CLIENT, simias-event-client >= $SIMIAS_CLIENT_MINIMUM_VERSION)
+PKG_CHECK_MODULES(SIMIAS_EVENT_CLIENT, simias-client-c >= $SIMIAS_CLIENT_MINIMUM_VERSION)
 AC_SUBST(SIMIAS_EVENT_CLIENT_CFLAGS)
 AC_SUBST(SIMIAS_EVENT_CLIENT_LIBS)
 
-SIMIAS_EVENT_CLIENT_PREFIX=$(pkg-config --variable=prefix simias-event-client)
+SIMIAS_EVENT_CLIENT_PREFIX=$(pkg-config --variable=prefix simias-client-c)
 AC_SUBST(SIMIAS_EVENT_CLIENT_PREFIX)
 
 PKG_CHECK_MODULES(IFOLDER, ifolder3 >= $IFOLDER_MINIMUM_VERSION)
