Modified the code so that in linux we build and install libsimias (gsoap interface for the Simias web service).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3513 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/Makefile.am
+++ b/simias/src/Makefile.am
@@ -5,9 +5,9 @@ DIST_SUBDIRS = $(SUBDIRS)
 endif
 
 if LINUX
-SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer GaimDomain
+SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer GaimDomain libsimias
 
-DIST_SUBDIRS = $(SUBDIRS) libsimias
+DIST_SUBDIRS = $(SUBDIRS)
 endif
 
 if WINDOWS
