Changed the file so simiasStub.h and simias.nsmap are installed for libsimias' "header" files so that a C program can actually build against it.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3515 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/libsimias/Makefile.am
+++ b/simias/src/libsimias/Makefile.am
@@ -16,7 +16,8 @@ override CFLAGS =
 libsimias_la_SOURCES = \
  	envC.c simiasClientLib.c stdsoap2.c
 
-pkginclude_HEADERS = 
+pkginclude_HEADERS = \
+	simiasStub.h simias.nsmap
 
 libsimias_la_CFLAGS = \
 	-DWITH_NONAMESPACES
