--- a/src/libsimias/Makefile.am
+++ b/src/libsimias/Makefile.am
@@ -16,7 +16,8 @@ override CFLAGS =
 libsimias_la_SOURCES = \
  	envC.c simiasClientLib.c stdsoap2.c
 
-pkginclude_HEADERS = 
+pkginclude_HEADERS = \
+	simiasStub.h simias.nsmap
 
 libsimias_la_CFLAGS = \
 	-DWITH_NONAMESPACES
