--- a/src/libsimias/Makefile.am
+++ b/src/libsimias/Makefile.am
@@ -17,7 +17,7 @@ libsimias_la_SOURCES = \
  	envC.c simiasClientLib.c stdsoap2.c
 
 pkginclude_HEADERS = \
-	simiasStub.h simias.nsmap
+	simiasStub.h simias.nsmap stdsoap2.h simiasH.h
 
 libsimias_la_CFLAGS = \
 	-DWITH_NONAMESPACES
