Added the headers to the install needed by a C program to be able to use libsimias.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3518 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/libsimias/Makefile.am
+++ b/simias/src/libsimias/Makefile.am
@@ -17,7 +17,7 @@ libsimias_la_SOURCES = \
  	envC.c simiasClientLib.c stdsoap2.c
 
 pkginclude_HEADERS = \
-	simiasStub.h simias.nsmap
+	simiasStub.h simias.nsmap stdsoap2.h simiasH.h
 
 libsimias_la_CFLAGS = \
 	-DWITH_NONAMESPACES
