Made building GaimDomain conditional.  If you want to build it, specify --enable-gaim-domain when running ./autogen.sh
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3521 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/Makefile.am
+++ b/simias/src/Makefile.am
@@ -1,3 +1,7 @@
+if BUILD_GAIM_DOMAIN
+GAIM_DOMAIN_DIR = GaimDomain
+endif
+
 if DARWIN
 SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer libsimias
 
@@ -5,7 +9,7 @@ DIST_SUBDIRS = $(SUBDIRS)
 endif
 
 if LINUX
-SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer GaimDomain libsimias
+SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer libsimias $(GAIM_DOMAIN_DIR)
 
 DIST_SUBDIRS = $(SUBDIRS)
 endif
