Added SUBDIRS = libsimias-gaim
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3523 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/GaimDomain/Makefile.am
+++ b/simias/src/GaimDomain/Makefile.am
@@ -1,6 +1,8 @@
 # handle Mono secondary dependencies
 export MONO_PATH := $(MONO_PATH):$(DESTDIR)$(libdir)
 
+SUBDIRS = libsimias-gaim
+
 GaimDomain_CSFILES = $(srcdir)/GaimService.cs $(srcdir)/GaimDomain.cs $(srcdir)/GaimDomainInfo.cs $(srcdir)/GaimDomainService.asmx.cs
 GaimDomain_CSFILES_CSC := $(subst /,$(SEP),$(GaimDomain_CSFILES))
 GaimDomain_INCLUDES =
