--- a/configure.in
+++ b/configure.in
@@ -425,12 +425,18 @@ AC_ARG_ENABLE(gaim-domain, [
         *) AC_MSG_ERROR(bad value ${enableval} for --enable-gaim-domain) ;;
     esac],[enable_gaim_domain=false])
 AM_CONDITIONAL(BUILD_GAIM_DOMAIN, test x$enable_gaim_domain = xtrue)
-#if test "$enable_gaim_domain" = "true"
-#then
-#  # Add anything needed specifically for when buiding the gaim-domain
-#else
-#  # Put anything here special for when not building gaim-domain
-#fi
+if test "$enable_gaim_domain" = "true"
+then
+  # Add anything needed specifically for when buiding the gaim-domain
+  PC_FILE_LIB_SIMIAS_GAIM="-lsimiasgaim"
+  SIMIAS_CONF_SIMIAS_GAIM="<Service name=\"Gaim Domain Service\" assembly=\"Simias.Gaim.dll\" enabled=\"True\" type=\"Thread\" class=\"Simias.Gaim.GaimService\" />"
+else
+  # Put anything here special for when not building gaim-domain
+  PC_FILE_LIB_SIMIAS_GAIM=
+  SIMIAS_CONF_SIMIAS_GAIM=
+fi
+AC_SUBST(PC_FILE_LIB_SIMIAS_GAIM)
+AC_SUBST(SIMIAS_CONF_SIMIAS_GAIM)
 
 
 
