I don't quite have simias.c and simias.h working yet.  Removing so others won't have broken builds.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3537 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/libsimias/Makefile.am
+++ b/simias/src/libsimias/Makefile.am
@@ -14,10 +14,10 @@ lib_LTLIBRARIES = libsimias.la
 override CFLAGS =
 
 libsimias_la_SOURCES = \
- 	envC.c simiasClientLib.c stdsoap2.c simias.c
+ 	envC.c simiasClientLib.c stdsoap2.c
 
 pkginclude_HEADERS = \
-	simiasStub.h simias.nsmap stdsoap2.h simiasH.h simias.h
+	simiasStub.h simias.nsmap stdsoap2.h simiasH.h
 
 libsimias_la_CFLAGS = \
 	-DWITH_NONAMESPACES
