--- a/simias/src/WebService/web.config
+++ b/simias/src/WebService/web.config
@@ -11,6 +11,8 @@
 	<system.web>
 		<customErrors mode="Off"/>
 
+    <httpRuntime maxRequestLength="1048576" />
+    
 <!-- take this out until we need it
 	<webServices>
 		<soapExtensionTypes>
