added mDnsDomain to the makefile VS: ---------------------------------------------------------------------- VS: Enter Log.  Lines beginning with `CVS:' are removed automatically
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3558 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/Makefile.am
+++ b/simias/src/Makefile.am
@@ -3,19 +3,19 @@ GAIM_DOMAIN_DIR = GaimDomain
 endif
 
 if DARWIN
-SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer libsimias
+SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer mDnsDomain libsimias
 
 DIST_SUBDIRS = $(SUBDIRS)
 endif
 
 if LINUX
-SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer libsimias $(GAIM_DOMAIN_DIR)
+SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer mDnsDomain libsimias $(GAIM_DOMAIN_DIR)
 
 DIST_SUBDIRS = $(SUBDIRS)
 endif
 
 if WINDOWS
-SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer
+SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer mDnsDomain
 
 DIST_SUBDIRS = $(SUBDIRS) libsimias
 endif
