added mDnsDomain to the build
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@3559 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/configure.in
+++ b/configure.in
@@ -490,6 +490,7 @@ src/POBoxWS/Makefile
 src/SyncService/Makefile
 src/SqliteProvider/Makefile
 src/libsimias/Makefile
+src/mDnsDomain/Makefile
 test/Makefile
 test/ChangeLog/Makefile
 test/Common/Makefile
