Buddies now sync into simias at startup.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3563 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/gaim-ifolder/gifolder/Makefile.am
+++ b/gaim-ifolder/gifolder/Makefile.am
@@ -2,18 +2,19 @@ plugindir = $(libdir)/gaim
 
 gifolder_la_LDFLAGS = \
 	-module -avoid-version \
-	$(SIMIAS_IFOLDER_LIBS)
+	$(SIMIAS_CLIENT_LIBS)
 
 if PLUGINS
 
 plugin_LTLIBRARIES = gifolder.la
 
 gifolder_la_SOURCES = \
-	gifolder.c
+	gifolder.c \
+	gaim-domain.c
 
 endif
 
-gifolder_la_LIBADD = 
+gifolder_la_LIBADD =
 
 AM_CPPFLAGS = \
 	-DDATADIR=\"$(datadir)\" \
