Added a comma in the -Wl,-rpath because this was needed to get the Gaim iFolder Plugin to build and run correctly without having to fool around with LD_LIBRARY_PATH.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@3568 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias-client-c.pc.in
+++ b/simias-client-c.pc.in
@@ -10,6 +10,6 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@prefix@/include
 
-Libs:-Wl,-rpath ${libdir} -L${libdir} -lsimias -lsimias-event @PC_FILE_LIB_SIMIAS_GAIM@
+Libs:-Wl,-rpath,${libdir} -L${libdir} -lsimias -lsimias-event @PC_FILE_LIB_SIMIAS_GAIM@
 Cflags: -I${includedir}
 
