Split out the functions into different files...modularized.  I hope everything still works.  It seems to.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3584 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/gaim-ifolder/gifolder/Makefile.am
+++ b/gaim-ifolder/gifolder/Makefile.am
@@ -14,8 +14,10 @@ gifolder_la_SOURCES = \
 	gifolder.c \
 	event-handler.c \
 	gaim-domain.c \
+	simias-invitation-store.c \
 	simias-messages.c \
-	simias-prefs.c
+	simias-prefs.c \
+	simias-util.c
 
 endif
 
