We'll now build libifolderclient.so in Linux.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3596 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/ifolder3-c.pc.in
+++ b/ifolder/ifolder3-c.pc.in
@@ -9,6 +9,6 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 
-Libs:-Wl,-rpath,${libdir} -L${libdir} -lifolder
+Libs:-Wl,-rpath,${libdir} -L${libdir} -lifolderclient
 Cflags: -I${includedir}
 
