Included all the needed header files needed to compile against libifolderclient.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3597 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/libifolder/Makefile.am
+++ b/ifolder/src/libifolder/Makefile.am
@@ -17,7 +17,7 @@ libifolderclient_la_SOURCES = \
  	envC.c iFolderClientLib.c stdsoap2.c ifolder.c
 
 pkginclude_HEADERS = \
-	ifolder.h
+	iFolderStub.h iFolder.nsmap stdsoap2.h iFolderH.h ifolder.h
 
 libifolderclient_la_CFLAGS = \
 	-DWITH_NONAMESPACES
