1. Added location provider framework. 2. Added the enterprise location provider.
The local database will need to be deleted and recreated with this check in.


git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@3630 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/Simias.csproj
+++ b/Simias.csproj
@@ -369,6 +369,21 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "src\Location\EnterpriseLocation.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "src\Location\ILocationProvider.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "src\Location\Locate.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "src\POBox\Message.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
