1. Added location provider framework. 2. Added the enterprise location provider.
The local database will need to be deleted and recreated with this check in.


git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3630 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/Common/simias-client-bootstrap.config.in
+++ b/simias/src/Common/simias-client-bootstrap.config.in
@@ -2,6 +2,7 @@
   <section name="ServiceManager">
 	<setting name="WebServicePath" value="@webdir@" />
     <setting name="Services">
+      <Service name="Simias Enterprise Location Provider" assembly="Simias" enabled="True" type="Thread" class="Simias.Location.EnterpriseLocation" />
       <Service name="Simias Domain Watcher" assembly="Simias" enabled="True" type="Thread" class="Simias.DomainWatcher.Service" />
       <Service name="Simias Change Log Service" assembly="Simias" enabled="True" type="Thread" class="Simias.Storage.ChangeLog" />
       <Service name="Simias Interprocess Event Service" assembly="Simias" enabled="True" type="Thread" class="Simias.Event.IProcEventServer" />
