I removed GaimDomin from the build, it was broken, I updated the mDnsDomain to include the sources so the package builds
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3632 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/GaimDomain/Makefile.am
+++ b/simias/src/GaimDomain/Makefile.am
@@ -11,7 +11,7 @@ GaimDomain_FLAGS = $(CSC_LIBFLAG)
 GaimDomain_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll Simias.dll SimiasClient.dll Novell.AddressBook.dll
 GaimDomain_LIBPATH = ../../src/Simias.dll ../../src/SimiasClient ../../src/AddressBook $(DESTDIR)$(webbindir)
 
-#EXTRA_DIST = $(GaimDomain_CSFILES)
+EXTRA_DIST = $(GaimDomain_CSFILES)
 
 NUNIT_TESTS := Simias.Gaim.dll
 
